# ndn-operator

./: .codecov.yml  .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  deny.toml  index.yaml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: audit.yaml  coverage.yaml  docker-push.yaml  helm-release.yaml  lint.yaml  publish.yaml  release.yaml  tag.yaml
charts/ndn-operator/: Chart.yaml  values.yaml
charts/ndn-operator-crd/: Chart.yaml  values.yaml
charts/ndn-operator-crd/templates/: certificate.yaml  network.yaml  router.yaml
charts/ndn-operator/templates/: clusterrole.yaml  clusterrolebinding.yaml  controller-cr.yaml  controller-crb.yaml  controller-deployment.yaml  controller-rb.yaml  controller-role.yaml  controller-sa.yaml  deployment.yaml  inject-cr.yaml  inject-crb.yaml  inject-deployment.yaml  inject-mutatingwebhook.yaml  inject-sa.yaml  inject-service.yaml  inject-tls-secret.yaml  inject-tls.yaml  injector-cr.yaml  injector-crb.yaml  injector-deployment.yaml  injector-sa.yaml  injector-service.yaml  injector-tls.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
charts/ndn-operator/templates/crd/: certificate.yaml  external_certificate.yaml  neighbor.yaml  neighbor_link.yaml  network.yaml  router.yaml
examples/external-certificate/: external-certificate.yaml  network.yaml  secret.yaml
examples/minimal/: network.yaml  producer-pod.yaml
examples/multi-cluster/: README.md
examples/multi-cluster/cluster-1/: certificate-1.yaml  external-certificate-1.yaml  external-certificate-2.yaml  neighbor-1.yaml  neighbor-link-1.yaml  network-1.yaml  secret-1.yaml  secret-2.yaml
examples/multi-cluster/cluster-2/: certificate-2.yaml  external-certificate-1.yaml  neighbor-2.yaml  neighbor-link-2.yaml  network-2.yaml  secret-1.yaml  secret-2.yaml
examples/secure/: network.yaml  self-signed-cert.yaml
examples/subnetworks/local/: README.md  certificates.yaml  consumers.yaml  neighbor.yaml  networks.yaml  ping-jobs.yaml  pingservers.yaml  producers.yaml
examples/workloads/: application-certificates.yaml  consumer-job.yaml  producer-pod.yaml
hack/integration/: collect-artifacts.sh  run-gke-tests.sh
hack/integration/fixtures/: peer-app-certificates.yaml  peer-consumer-job.yaml  peer-forger-pod.yaml  peer-network.yaml  peer-primary-root.yaml  peer-rejection-job.yaml  peer-self-signed-cert.yaml  primary-peer-root.yaml
infra/gke-integration/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
manifests/: network.yaml  ping-job.yaml  pingserver-pod.yaml
operator-derive/: Cargo.toml
operator-derive/src/: lib.rs
operator-derive/tests/: conditions.rs
operator-derive/tests/fixtures/: derive_fail.rs  derive_pass.rs
src/: cert_controller.rs  conditions.rs  controller.rs  crd.rs  daemonset.rs  events_helper.rs  ext_cert_controller.rs  helper.rs  lib.rs  main.rs  ndnd.rs  ndnd_config.rs  neighbor_controller.rs  neighbor_link_controller.rs  network_controller.rs  pod_controller.rs  router_controller.rs  telemetry.rs
src/cert_controller/: certificate.rs  crypto.rs  main.rs  reconcile.rs  types.rs
src/cert_controller/reconcile/: tests.rs
src/controller/: main.rs  network.rs  pod_sync.rs  router.rs
src/crd/: network.rs  router.rs
src/ext_cert_controller/: main.rs  reconcile.rs
src/macros/: controller.rs
src/ndnd/: dv.rs  fw.rs
src/ndnd_config/: dv.rs  fw.rs
src/neighbor_controller/: main.rs  neighbor.rs
src/neighbor_link_controller/: main.rs  neighbor_link.rs
src/network_controller/: daemonset.rs  main.rs  neighbor_link.rs  network.rs  pod_sync.rs  router.rs
src/pod_controller/: main.rs  pod_sync.rs
src/router_controller/: main.rs  router.rs
tests/: daemonset_builder.rs  network_env.rs
