[package]
name = "ndn-operator"
version = "0.3.0+d548732"
edition = "2024"

[lib]
name = "operator"
path = "src/lib.rs"

[[bin]]
name = "gencrd"
path = "src/bin/gencrd.rs"

[[bin]]
name = "init"
path = "src/bin/pod_init.rs"

[[bin]]
name = "sidecar"
path = "src/bin/pod_sidecar.rs"

[[bin]]
name = "injector"
path = "src/bin/injector.rs"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.98"
futures = "0.3.31"
json-patch = "4.0.0"
local-ip-address = "0.6.5"
schemars = "0.8.22"
serde = "1.0.218"
serde_json = "1.0.139"
serde_with = "3.13.0"
serde_yaml = "0.9.34-deprecated"
thiserror = "2.0.12"
tracing = "0.1.41"

  [dependencies.chrono]
  version = "0.4.41"
  features = [ "serde" ]

  [dependencies.clap]
  version = "4.5.40"
  features = [ "derive" ]

  [dependencies.k8s-openapi]
  version = "0.25.0"
  features = [ "latest" ]

  [dependencies.kube]
  version = "1.1.0"
  features = [ "runtime", "client", "derive", "admission" ]

  [dependencies.tokio]
  version = "1.45.1"
  features = [ "macros", "rt-multi-thread" ]

  [dependencies.tracing-subscriber]
  version = "0.3.19"
  features = [ "json", "env-filter" ]

  [dependencies.warp]
  version = "0.3.7"
  default-features = false
  features = [ "tls" ]
