[package]
name = "ndn-operator"
version = "0.4.0"
edition = "2024"

[lib]
name = "operator"
path = "src/lib.rs"

[[bin]]
name = "gencrd"
path = "src/bin/gencrd.rs"

[[bin]]
name = "init"
path = "src/bin/pod_init.rs"

[[bin]]
name = "sidecar"
path = "src/bin/pod_sidecar.rs"

[[bin]]
name = "injector"
path = "src/bin/injector.rs"

[dependencies]
operator-derive = { path = "operator-derive" }
actix-web = "4.11.0"
anyhow = "1.0.100"
duration-string = { version = "0.5.3", features = ["serde"] }
futures = "0.3.31"
json-patch = "4.1.0"
local-ip-address = "0.6.5"
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.16.0"
serde_yaml = "0.9.34-deprecated"
tempfile = "3.23.0"
thiserror = "2.0.17"
tracing = "0.1.41"

  [dependencies.chrono]
  version = "0.4.42"
  features = [ "serde" ]

  [dependencies.clap]
  version = "4.5.50"
  features = [ "derive" ]

  [dependencies.k8s-openapi]
  version = "0.26.0"
  features = [ "latest", "schemars" ]

  [dependencies.kube]
  version = "2.0.1"
  features = [ "runtime", "client", "derive", "admission" ]

  [dependencies.tokio]
  version = "1.48.0"
  features = [ "macros", "rt-multi-thread" ]

  [dependencies.tracing-subscriber]
  version = "0.3.20"
  features = [ "json", "env-filter" ]

  [dependencies.warp]
  version = "0.3.7"
  default-features = false
  features = [ "tls" ]
