[package]
name = "operator-derive"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
trybuild = "1.0"
k8s-openapi = { version = "0.26.0", features = ["latest"] }
